[gd_scene load_steps=28 format=2]

[ext_resource path="res://scripts/EngineList.gd" type="Script" id=1]
[ext_resource path="res://scripts/Exit.gd" type="Script" id=2]
[ext_resource path="res://scripts/List.gd" type="Script" id=3]
[ext_resource path="res://scripts/tab/Installed.gd" type="Script" id=4]
[ext_resource path="res://scripts/tab/to_download.gd" type="Script" id=5]
[ext_resource path="res://scripts/ItemList.gd" type="Script" id=6]
[ext_resource path="res://scripts/Install.gd" type="Script" id=7]
[ext_resource path="res://scripts/Run.gd" type="Script" id=8]
[ext_resource path="res://scripts/Remove.gd" type="Script" id=9]
[ext_resource path="res://scripts/Reinstall.gd" type="Script" id=10]
[ext_resource path="res://scripts/settings-Runner.gd" type="Script" id=11]
[ext_resource path="res://scripts/settings-Updater.gd" type="Script" id=12]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=13]
[ext_resource path="res://scripts/Back without saving.gd" type="Script" id=14]
[ext_resource path="res://scripts/LOG_GUI.gd" type="Script" id=15]
[ext_resource path="res://textures/design/theme.tres" type="Theme" id=16]
[ext_resource path="res://scripts/Add-maunal.gd" type="Script" id=17]
[ext_resource path="res://scripts/back.gd" type="Script" id=18]
[ext_resource path="res://scripts/import.gd" type="Script" id=19]
[ext_resource path="res://scripts/fix.gd" type="Script" id=20]
[ext_resource path="res://scripts/feedback_button.gd" type="Script" id=21]
[ext_resource path="res://scripts/Feedback.gd" type="Script" id=22]
[ext_resource path="res://godot.png" type="Texture" id=23]
[ext_resource path="res://scripts/info.gd" type="Script" id=24]
[ext_resource path="res://scripts/license_button.gd" type="Script" id=25]
[ext_resource path="res://scripts/License.gd" type="Script" id=26]
[ext_resource path="res://scripts/Shortcut.gd" type="Script" id=27]

[node name="EngineList" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_right = 1000.0
margin_bottom = 600.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Panel"]
margin_left = 18.0
margin_top = 85.0
margin_right = 849.0
margin_bottom = 582.0
border_color = Color( 0, 0.164706, 0.258824, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect2" type="ReferenceRect" parent="Panel"]
margin_left = 862.0
margin_top = 83.0
margin_right = 984.0
margin_bottom = 275.0
border_color = Color( 0, 0.164706, 0.258824, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect3" type="ReferenceRect" parent="Panel"]
margin_left = 862.0
margin_top = 477.0
margin_right = 984.0
margin_bottom = 591.0
border_color = Color( 0, 0.164706, 0.258824, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Panel"]
points = PoolVector2Array( 16.1591, 68.2499, 987.726, 68.3636 )
width = 5.0
default_color = Color( 0, 0.25098, 0.45098, 1 )

[node name="Tab" type="Control" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Installed" type="Button" parent="Panel/Tab"]
margin_left = 17.3386
margin_top = 16.0
margin_right = 127.339
margin_bottom = 56.0
theme = ExtResource( 16 )
text = "Installed"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Control" parent="Panel/Tab/Installed"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Run" type="Button" parent="Panel/Tab/Installed/GUI"]
margin_left = 851.0
margin_top = 73.0
margin_right = 959.0
margin_bottom = 112.0
theme = ExtResource( 16 )
text = "Run"
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reinstall" type="Button" parent="Panel/Tab/Installed/GUI"]
margin_left = 851.63
margin_top = 119.702
margin_right = 959.63
margin_bottom = 158.702
theme = ExtResource( 16 )
text = "Reinstall"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shortcut" type="Button" parent="Panel/Tab/Installed/GUI"]
visible = false
margin_left = 851.667
margin_top = 163.33
margin_right = 958.667
margin_bottom = 204.33
text = "Shortcut:off"
script = ExtResource( 27 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Remove" type="Button" parent="Panel/Tab/Installed/GUI"]
modulate = Color( 0.984314, 0.00784314, 0.00784314, 1 )
margin_left = 851.685
margin_top = 210.595
margin_right = 959.685
margin_bottom = 249.595
theme = ExtResource( 16 )
text = "Remove"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Tab/Installed/GUI"]
margin_left = 324.196
margin_top = 86.876
margin_right = 505.196
margin_bottom = 100.876
theme = ExtResource( 16 )
text = "Actually nothing is installed."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Panel/Tab/Installed/GUI"]
margin_left = 5.0
margin_top = 74.0
margin_right = 830.0
margin_bottom = 567.0
theme = ExtResource( 16 )
allow_reselect = true
max_text_lines = 2
auto_height = true
max_columns = 10
icon_mode = 0
icon_scale = 0.5
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="to_download" type="Button" parent="Panel/Tab"]
margin_left = 862.67
margin_top = 11.3137
margin_right = 980.67
margin_bottom = 52.3137
theme = ExtResource( 16 )
text = "All"
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Control" parent="Panel/Tab/to_download"]
visible = false
margin_left = -730.0
margin_top = 5.0
margin_right = -690.0
margin_bottom = 45.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Install" type="Button" parent="Panel/Tab/to_download/GUI"]
margin_left = 734.339
margin_top = 74.0
margin_right = 842.339
margin_bottom = 113.0
theme = ExtResource( 16 )
text = "Install"
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Add-maunal" type="Button" parent="Panel/Tab/to_download/GUI"]
margin_left = 734.245
margin_top = 117.617
margin_right = 842.245
margin_bottom = 160.617
text = "Add from file"
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Panel/Tab/to_download/GUI"]
margin_left = -117.0
margin_top = 72.0
margin_right = 1072.0
margin_bottom = 786.0
rect_scale = Vector2( 0.7, 0.7 )
theme = ExtResource( 16 )
allow_reselect = true
auto_height = true
max_columns = 10
icon_mode = 0
icon_scale = 0.5
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Panel"]
margin_left = 868.339
margin_top = 538.492
margin_right = 976.339
margin_bottom = 577.492
theme = ExtResource( 16 )
text = "Exit"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="Panel"]
margin_left = 868.339
margin_top = 484.978
margin_right = 976.339
margin_bottom = 523.978
theme = ExtResource( 16 )
text = "Settings"
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Control" parent="Panel/Settings"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="Panel/Settings/GUI"]
modulate = Color( 1, 1, 1, 0.501961 )
margin_left = -892.0
margin_top = -511.0
margin_right = 158.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/Settings/GUI"]
margin_left = -772.449
margin_top = -441.959
margin_right = 27.5508
margin_bottom = 58.0407
theme = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back without saving" type="Button" parent="Panel/Settings/GUI/Panel"]
margin_left = 622.54
margin_top = 469.549
margin_right = 789.54
margin_bottom = 494.549
theme = ExtResource( 16 )
text = "Back without saving"
script = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back with saving" type="Button" parent="Panel/Settings/GUI/Panel"]
margin_left = 646.765
margin_top = 436.967
margin_right = 787.765
margin_bottom = 461.967
theme = ExtResource( 16 )
text = "Back with saving"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Save" type="Button" parent="Panel/Settings/GUI/Panel"]
margin_left = 647.887
margin_top = 405.355
margin_right = 785.887
margin_bottom = 430.355
theme = ExtResource( 16 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Panel/Settings/GUI/Panel"]
position = Vector2( 0, 25 )
points = PoolVector2Array( 12.1766, 31.4662, 770.707, 31.5366 )
width = 5.0

[node name="main" type="Label" parent="Panel/Settings/GUI/Panel"]
margin_left = 313.955
margin_top = -8.50448
margin_right = 377.955
margin_bottom = 10.4955
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 16 )
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Runner" type="Control" parent="Panel/Settings/GUI/Panel"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Settings/GUI/Panel/Runner"]
margin_left = 155.173
margin_top = 61.0473
margin_right = 209.173
margin_bottom = 80.0473
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 16 )
text = "Runner"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Panel/Settings/GUI/Panel/Runner"]
points = PoolVector2Array( 7.57771, 107.979, 400.612, 107.685 )
width = 3.0

[node name="Label2" type="Label" parent="Panel/Settings/GUI/Panel/Runner"]
margin_left = 18.8988
margin_top = 120.952
margin_right = 246.899
margin_bottom = 134.952
theme = ExtResource( 16 )
text = "Close launcher when godot starting:

Record godot logs:

Language:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cgs" type="Button" parent="Panel/Settings/GUI/Panel/Runner"]
modulate = Color( 0, 1, 0, 1 )
margin_left = 368.905
margin_top = 119.839
margin_right = 389.905
margin_bottom = 144.839
theme = ExtResource( 16 )
text = "+"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rgl" type="Button" parent="Panel/Settings/GUI/Panel/Runner"]
modulate = Color( 0, 1, 0, 1 )
margin_left = 368.2
margin_top = 166.716
margin_right = 389.2
margin_bottom = 191.716
theme = ExtResource( 16 )
text = "+"

[node name="lang" type="ItemList" parent="Panel/Settings/GUI/Panel/Runner"]
margin_left = 99.8591
margin_top = 203.899
margin_right = 402.859
margin_bottom = 271.899
theme = ExtResource( 16 )
items = [ "pl", null, false, "en", null, false ]
allow_reselect = true
auto_height = true

[node name="Updater" type="Control" parent="Panel/Settings/GUI/Panel"]
margin_left = 390.0
margin_right = 430.0
margin_bottom = 40.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/Settings/GUI/Panel/Updater"]
margin_left = 155.173
margin_top = 61.0474
margin_right = 218.173
margin_bottom = 80.0474
rect_scale = Vector2( 2, 2 )
theme = ExtResource( 16 )
text = "Updater"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Panel/Settings/GUI/Panel/Updater"]
points = PoolVector2Array( 7.57771, 107.979, 400.612, 107.685 )
width = 3.0

[node name="Label2" type="Label" parent="Panel/Settings/GUI/Panel/Updater"]
margin_left = 18.8988
margin_top = 120.952
margin_right = 246.899
margin_bottom = 134.952
theme = ExtResource( 16 )
text = "Download chunk size:

Update resources.list: <Unavailable>

Download last version of Godot: <Unavailable>

Update launcher when update is available: <Unavailable>"

[node name="DCS" type="Button" parent="Panel/Settings/GUI/Panel/Updater"]
margin_left = 347.249
margin_top = 117.731
margin_right = 395.249
margin_bottom = 142.731
theme = ExtResource( 16 )
text = "8192"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="fix" type="Button" parent="Panel/Settings/GUI/Panel"]
margin_left = 19.1911
margin_top = 278.295
margin_right = 93.1911
margin_bottom = 297.295
text = "Fix prefix"
script = ExtResource( 20 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="feedback" type="Button" parent="Panel/Settings/GUI/Panel"]
visible = false
margin_left = 19.1911
margin_top = 311.258
margin_right = 133.191
margin_bottom = 330.258
text = "Send Feedback"
script = ExtResource( 21 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="license" type="Button" parent="Panel/Settings/GUI/Panel"]
margin_left = 19.1911
margin_top = 311.258
margin_right = 133.191
margin_bottom = 330.258
text = "License"
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LOG_GUI" type="Control" parent="Panel"]
visible = false
margin_left = 868.339
margin_top = 89.0
margin_right = 908.339
margin_bottom = 129.0
script = ExtResource( 15 )

[node name="background" type="Panel" parent="Panel/LOG_GUI"]
modulate = Color( 1, 1, 1, 0.368627 )
margin_left = -906.0
margin_top = -113.0
margin_right = 201.0
margin_bottom = 554.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/LOG_GUI"]
margin_left = -746.0
margin_top = -2.0
margin_right = -15.0
margin_bottom = 452.0
theme = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel/LOG_GUI/Panel"]
margin_left = 337.24
margin_top = 4.5659
margin_right = 377.24
margin_bottom = 18.5659
rect_scale = Vector2( 3, 3 )
theme = ExtResource( 16 )
text = "Log"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D2" type="Line2D" parent="Panel/LOG_GUI/Panel"]
position = Vector2( -26.449, 20 )
points = PoolVector2Array( 42.7626, 34, 752.908, 33.5038 )
width = 5.0

[node name="log" type="RichTextLabel" parent="Panel/LOG_GUI/Panel"]
margin_left = 22.0
margin_top = 74.0
margin_right = 722.0
margin_bottom = 380.0
theme = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D3" type="Line2D" parent="Panel/LOG_GUI/Panel"]
position = Vector2( -26.449, 350 )
points = PoolVector2Array( 42.7626, 34, 752.908, 33.5038 )
width = 5.0

[node name="ok" type="Button" parent="Panel/LOG_GUI/Panel"]
margin_left = 338.885
margin_top = 399.182
margin_right = 384.885
margin_bottom = 426.182
theme = ExtResource( 16 )
text = "Ok"

[node name="copy" type="Button" parent="Panel/LOG_GUI/Panel"]
margin_left = 25.3984
margin_top = 404.787
margin_right = 92.3984
margin_bottom = 424.787
theme = ExtResource( 16 )
text = "Copy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="import" type="Control" parent="Panel"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="Panel/import"]
modulate = Color( 1, 1, 1, 0.298039 )
margin_left = -59.0
margin_top = -17.0
margin_right = 1045.0
margin_bottom = 642.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel/import"]
margin_left = 251.0
margin_top = 187.0
margin_right = 709.0
margin_bottom = 375.0
theme = ExtResource( 16 )
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="Panel/import/Panel"]
margin_left = 341.993
margin_top = 142.566
margin_right = 448.993
margin_bottom = 177.566
theme = ExtResource( 16 )
text = "Back"
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Panel/import/Panel"]
points = PoolVector2Array( 447.517, 42.5132, 12.8624, 42.5921 )
width = 5.0

[node name="Label" type="Label" parent="Panel/import/Panel"]
margin_left = 178.766
margin_top = 7.4364
margin_right = 231.766
margin_bottom = 26.4364
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 16 )
text = "Import"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="path" type="LineEdit" parent="Panel/import/Panel"]
margin_left = 94.0
margin_top = 99.0
margin_right = 424.0
margin_bottom = 132.0
theme = ExtResource( 16 )

[node name="name" type="LineEdit" parent="Panel/import/Panel"]
margin_left = 95.0
margin_top = 57.0
margin_right = 421.0
margin_bottom = 90.0
theme = ExtResource( 16 )
align = 1

[node name="Import" type="Button" parent="Panel/import/Panel"]
margin_left = 244.365
margin_top = 143.374
margin_right = 334.365
margin_bottom = 178.374
theme = ExtResource( 16 )
text = "Import"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Label" parent="Panel/import/Panel"]
margin_left = 25.0
margin_top = 62.0
margin_right = 73.0
margin_bottom = 103.0
theme = ExtResource( 16 )
text = "Name:

Path:"

[node name="Feedback" type="Control" parent="Panel"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 22 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="Panel/Feedback"]
modulate = Color( 1, 1, 1, 0.380392 )
margin_left = -76.0
margin_top = -48.0
margin_right = 1102.0
margin_bottom = 644.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Panel" parent="Panel/Feedback"]
margin_left = 150.362
margin_top = 103.552
margin_right = 832.362
margin_bottom = 506.552
theme = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Panel/Feedback/GUI"]
points = PoolVector2Array( 668.844, 52.1592, 11.6384, 52.4482 )
width = 5.0

[node name="main" type="Label" parent="Panel/Feedback/GUI"]
margin_left = 248.544
margin_top = 14.2705
margin_right = 362.544
margin_bottom = 33.2705
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 16 )
text = "Send Feedback"

[node name="Subject" type="LineEdit" parent="Panel/Feedback/GUI"]
margin_left = 14.6742
margin_top = 83.3349
margin_right = 664.674
margin_bottom = 110.335
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="Panel/Feedback/GUI"]
margin_left = 13.0
margin_top = 141.0
margin_right = 664.0
margin_bottom = 351.0
theme = ExtResource( 16 )
text = "aaaaa"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="Panel/Feedback/GUI"]
margin_left = 609.665
margin_top = 363.0
margin_right = 669.665
margin_bottom = 391.0
text = "Back"

[node name="send" type="Button" parent="Panel/Feedback/GUI"]
margin_left = 545.018
margin_top = 364.674
margin_right = 600.018
margin_bottom = 392.674
text = "Send"

[node name="Label" type="Label" parent="Panel/Feedback/GUI"]
margin_left = 17.3529
margin_top = 58.733
margin_right = 78.3529
margin_bottom = 77.733
text = "Subject:"

[node name="Label2" type="Label" parent="Panel/Feedback/GUI"]
margin_left = 16.0181
margin_top = 117.466
margin_right = 89.0181
margin_bottom = 136.466
text = "Contents:"

[node name="License" type="Control" parent="Panel"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="background" type="Panel" parent="Panel/License"]
modulate = Color( 1, 1, 1, 0.380392 )
margin_left = -76.0
margin_top = -48.0
margin_right = 1102.0
margin_bottom = 644.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GUI" type="Panel" parent="Panel/License"]
margin_left = 150.362
margin_top = 103.552
margin_right = 832.362
margin_bottom = 506.552
theme = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="Panel/License/GUI"]
points = PoolVector2Array( 668.844, 52.1592, 11.6384, 52.4482 )
width = 5.0

[node name="main" type="Label" parent="Panel/License/GUI"]
margin_left = 248.544
margin_top = 14.2705
margin_right = 362.544
margin_bottom = 33.2705
rect_scale = Vector2( 1.5, 1.5 )
theme = ExtResource( 16 )
text = "License"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back" type="Button" parent="Panel/License/GUI"]
margin_left = 609.665
margin_top = 363.0
margin_right = 669.665
margin_bottom = 391.0
text = "Back"

[node name="RichTextLabel" type="RichTextLabel" parent="Panel/License/GUI"]
margin_left = 12.0
margin_top = 66.0
margin_right = 668.0
margin_bottom = 353.0
text = "=== Launcher License ===

MIT License

Copyright (c) 2020-2021 GamePlayer

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

=== Godot Engine License ===

Copyright (c) 2007-2021 Juan Linietsky, Ariel Manzur.
Copyright (c) 2014-2021 Godot Engine contributors (cf. AUTHORS.md).

Permission is hereby granted, free of charge, to any person obtaining a copy
of this software and associated documentation files (the \"Software\"), to deal
in the Software without restriction, including without limitation the rights
to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
copies of the Software, and to permit persons to whom the Software is
furnished to do so, subject to the following conditions:

The above copyright notice and this permission notice shall be included in all
copies or substantial portions of the Software.

THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
SOFTWARE.

==="
__meta__ = {
"_edit_use_anchors_": false
}

[node name="info" type="Panel" parent="Panel"]
visible = false
margin_left = 143.0
margin_top = 9.0
margin_right = 845.0
margin_bottom = 58.0
theme = ExtResource( 16 )
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Panel/info"]
position = Vector2( 25.4798, 23.96 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 23 )

[node name="Label" type="Label" parent="Panel/info"]
margin_left = 59.0
margin_top = 7.0
margin_right = 693.0
margin_bottom = 41.0
[connection signal="item_selected" from="Panel/Tab/Installed/GUI/ItemList" to="Panel/Tab/Installed" method="_on_ItemList_item_selected"]
[connection signal="item_selected" from="Panel/Tab/Installed/GUI/ItemList" to="Panel/Tab/Installed/GUI/ItemList" method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="Panel/Tab/Installed/GUI/ItemList" to="Panel/Tab/Installed" method="_on_ItemList_nothing_selected"]
[connection signal="item_selected" from="Panel/Tab/to_download/GUI/ItemList" to="Panel/Tab/to_download" method="_on_ItemList_item_selected"]
[connection signal="item_selected" from="Panel/Tab/to_download/GUI/ItemList" to="Panel/Tab/to_download/GUI/ItemList" method="_on_ItemList_item_selected"]
[connection signal="nothing_selected" from="Panel/Tab/to_download/GUI/ItemList" to="Panel/Tab/to_download" method="_on_ItemList_nothing_selected"]
[connection signal="item_selected" from="Panel/Settings/GUI/Panel/Runner/lang" to="Panel/Settings" method="_on_lang_item_selected"]
